<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.examples.mycapstoneproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_catalog"
            app:destination="@id/navigation_catalog" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.examples.mycapstoneproject.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" >
        <action
            android:id="@+id/action_navigation_catalog_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_catalog_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.examples.mycapstoneproject.ui.detail.DetailFragment"
        android:label="Detail "
        tools:layout="@layout/fragment_detail" >

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.examples.mycapstoneproject.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.examples.mycapstoneproject.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


</navigation>