<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    android:background="@color/sand"
    tools:context=".ui.auth.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Login"
        android:textColor="@color/darken_brown"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_emailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Email"
        android:textColor="@color/darken_brown"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailLogin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darken_brown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailLogin"
        app:layout_constraintBottom_toTopOf="@+id/tv_pwLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:hint="@string/insert_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pwLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Password"
        android:textColor="@color/darken_brown"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputPwLogin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPwLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darken_brown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwLogin"
        app:layout_constraintBottom_toTopOf="@id/btn_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPwRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/insert_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darken_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPwLogin"
        app:layout_constraintBottom_toBottomOf="@id/btn_loginOption"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loginOption"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_option"
        android:textAllCaps="false"
        android:textColor="@color/darken_brown"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>