<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/sand"

    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/tv_titleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Register"
        android:textColor="@color/brown1"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_emailRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Email"
        android:textColor="@color/brown1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailRegister"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailRegister"
        app:layout_constraintBottom_toTopOf="@+id/tv_nameRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:hint="@string/insert_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_nameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Name"
        android:textColor="@color/brown1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputNameRegister"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameRegister"
        app:layout_constraintBottom_toTopOf="@+id/tv_gender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:hint="@string/insert_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Gender"
        android:textColor="@color/brown1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputNameRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rg_gender"/>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown1"

        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        app:layout_constraintBottom_toTopOf="@+id/tv_pwRegister">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Male"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Female"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_pwRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Password"
        android:textColor="@color/brown1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputPwRegister"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPwRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwRegister"
        app:layout_constraintBottom_toTopOf="@id/tv_pwRegister2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPwRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/insert_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pwRegister2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Password Confirmation"
        android:textColor="@color/brown1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputPwRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputPwRegister2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPwRegister2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/brown1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwRegister2"
        app:layout_constraintBottom_toTopOf="@id/btn_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPwRegister2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/insert_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/brown1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPwRegister2"
        app:layout_constraintBottom_toBottomOf="@id/btn_registerOption"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registerOption"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_option"
        android:textAllCaps="false"
        android:textColor="@color/brown1"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>